syntax = "proto2";

package dev.vhonta.news.proto;

import "zio-temporal.proto";

message NewsFeedIntegrationNewsApiDetails {
  required string token = 1;
}

enum NewsFeedIntegrationType {
  // Naming must be snake_case
  news_api = 1;
}

message NewsFeedIntegration {
  required zio.temporal.protobuf.UUID readerId = 1;
  oneof integration {
    NewsFeedIntegrationNewsApiDetails newsApi = 2;
  }
}